--- a/css/date.css
+++ b/css/date.css
@@ -81,3 +81,44 @@ input[type="date"] {
   border-radius: 12px;
   border: 2px solid #ffe3e1;
 }
+
+/* Media queries for responsiveness */
+@media (max-width: 768px) {
+  h1 {
+    font-size: 30px;
+  }
+
+  label {
+    font-size: 18px;
+  }
+
+  input[type="date"] {
+    padding: 8px;
+    font-size: 16px;
+  }
+
+  .button {
+    padding: 8px 16px;
+    font-size: 16px;
+  }
+}
+
+@media (max-width: 480px) {
+  h1 {
+    font-size: 30px;
+  }
+
+  label {
+    font-size: 16px;
+  }
+
+  input[type="date"] {
+    padding: 6px;
+    font-size: 14px;
+  }
+
+  .button {
+    padding: 6px 12px;
+    font-size: 14px;
+  }
+}
