--- a/css/message.css
+++ b/css/message.css
@@ -178,6 +178,8 @@ body {
   gap: 50px;
   align-items: center;
   justify-content: center;
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 .photo-stack {
@@ -215,4 +217,97 @@ body {
 .photo:active {
   cursor: grabbing;
   transition: none;
+}
+
+@media (max-width: 768px) {
+  #thankyou {
+    font-size: 50px;
+  }
+
+  #happy-valentines-day {
+    font-size: 50px;
+  }
+
+  .container {
+    gap: 20px;
+  }
+
+  .button {
+    padding: 8px 16px;
+    font-size: 16px;
+  }
+
+  .book {
+    width: 180px;
+    height: 250px;
+  }
+
+  .book-content {
+    font-size: 14px;
+    padding-left: 20px;
+    padding-right: 10px;
+  }
+
+  .photo-stack {
+    width: 300px;
+    height: 400px;
+  }
+
+  .photo img {
+    height: 80%;
+  }
+}
+
+@media (max-width: 480px) {
+  #thankyou {
+    font-size: 30px;
+  }
+
+  #happy-valentines-day {
+    font-size: 30px;
+  }
+
+  .container h1 {
+    margin-top: 20px;
+    font-size: 20px;
+  }
+
+  .container {
+    gap: 10px;
+    margin-top: 20px;
+  }
+
+  .button {
+    padding: 6px 12px;
+    font-size: 14px;
+  }
+
+  .image-and-book {
+    display: flex;
+    gap: 20px;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    margin-bottom: 0px;
+}
+
+  .book {
+    width: 150px;
+    height: 200px;
+  }
+
+  .book-content {
+    font-size: 12px;
+    padding-left: 10px;
+    padding-right: 5px;
+  }
+
+  .photo-stack {
+    width: 250px;
+    height: 350px;
+  }
+
+  .photo img {
+    height: 75%;
+  }
 }
